# autoquant

./: .gitignore  README.md  pyproject.toml
configs/: academic_ficura.yaml  academic_grobys.yaml  academic_ltw.yaml  autoevolve_program.yaml  cs_mom_120d_daily.yaml  m001_cs_mom_60d_daily.yaml  paper_ficura_binance.yaml  paper_grobys_binance.yaml  paper_ltw_binance.yaml  sample_momentum.yaml  trading_autoresearch.yaml
docs/: academic_replication.md  experiment_template.md  program_trading.md  research_program.md  systematic_experiments.md
docs/experiments/: M001_cs_mom_60d_daily.md
docs/superpowers/plans/: 2026-03-18-structure-mainline-reduction.md
docs/superpowers/specs/: 2026-03-18-structure-mainline-reduction-design.md
knowledge/skills/autoresearch-trading/: SKILL.md
src/binance4h_research/: __init__.py  academic_config.py  academic_data.py  academic_panel.py  academic_replication.py  analytics.py  backtest.py  cli.py  config.py  data.py  experiment.py  market_data.py  paper_approx.py  paper_approx_config.py  portfolio.py  signals.py  structure_decompose.py  structure_scan.py  structure_validate.py  universe.py
src/binance4h_research/autoevolve/: __init__.py  context.py  evaluate.py  mutate.py  program.py  runner.py  spec.py  store.py
src/binance4h_research/trading_autoresearch/: __init__.py  runner.py  (+5 more)
tests/: test_academic_replication.py  test_autoevolve.py  test_cli.py  test_data.py  test_market_data.py  test_paper_approx.py  test_pipeline.py  test_structure_decompose.py  test_structure_scan.py  test_structure_validate.py  test_trading_autoresearch.py
(+6 files in other folders)
